kustomize/overlays/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uniselec-admin-dev
  labels:
    environment: development
    app: uniselec-admin
