kustomize/overlays/development/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniselec-admin
spec:
  template:
    metadata:
      labels:
        environment: development
